timeout + server history + bug fixes