@@ -4,14 +4,16 @@ import java.io.*;
 import java.net.*;
 import java.util.*;
 import java.util.concurrent.*;
-import java.util.concurrent.atomic.AtomicInteger;
 
 public class Server {
     private final List<ClientHandler> clients = Collections.synchronizedList(new ArrayList<>());
     private final Queue<ChatMessage> messageQueue = new ConcurrentLinkedQueue<>();
     private final List<ChatMessage> messageHistory = Collections.synchronizedList(new ArrayList<>());
-    private final AtomicInteger sessionCounter = new AtomicInteger(1);
     private ServerSocket serverSocket;
+
+    public static String generateSessionId() {return "session-" + new Random().nextInt(999999);}
+    public void log(String message) {System.out.println(message);}
+    public synchronized void addClient(ClientHandler client) {clients.add(client);}
 
     public Server(int port) {
         try {
@@ -25,7 +27,7 @@ public class Server {
 
     public void start() {
         startMessageDispatcher();
-        startInactivityMonitor();
+        startPingMonitor();
 
         while (true) {
             try {
@@ -37,11 +39,11 @@ public class Server {
                 String protocol = dis.readUTF();
 
                 ClientHandler handler;
-                if (protocol.equalsIgnoreCase("JSON")) {
+                if (protocol.equalsIgnoreCase("JSON"))
                     handler = new ClientHandlerJSON(socket, dis, dos, this);
-                } else if (protocol.equalsIgnoreCase("XML")) {
+                else if (protocol.equalsIgnoreCase("XML"))
                     handler = new ClientHandlerXML(socket, dis, dos, this);
-                } else {
+                else {
                     log("Unknown protocol: " + protocol);
                     socket.close();
                     continue;
@@ -56,56 +58,44 @@ public class Server {
         }
     }
 
-    public synchronized void addClient(ClientHandler client) {
-        clients.add(client);
-    }
-
     public synchronized void removeClient(ClientHandler client) {
         clients.remove(client);
         log("Client removed: " + client.getUserName());
     }
 
     public synchronized boolean isNameTaken(String name) {
-        for (ClientHandler c : clients) {
+        for (ClientHandler c : clients)
             if (c.isLoggedIn() && c.getUserName().equalsIgnoreCase(name)) return true;
-        }
         return false;
     }
 
     public List<ClientHandler> getLoggedInClients() {
         List<ClientHandler> result = new ArrayList<>();
         synchronized (clients) {
-            for (ClientHandler c : clients) {
+            for (ClientHandler c : clients)
                 if (c.isLoggedIn()) result.add(c);
-            }
         }
         return result;
     }
 
     public void broadcastUserLogin(String userName, String excludeSession) {
-        for (ClientHandler c : getLoggedInClients()) {
-            if (!c.getSessionId().equals(excludeSession)) {
+        for (ClientHandler c : getLoggedInClients())
+            if (!c.getSessionId().equals(excludeSession))
                 c.sendUserLoginEvent(userName);
-            }
-        }
         log("Broadcast userlogin: " + userName);
     }
 
     public void broadcastUserLogout(String userName, String excludeSession) {
-        for (ClientHandler c : getLoggedInClients()) {
-            if (!c.getSessionId().equals(excludeSession)) {
+        for (ClientHandler c : getLoggedInClients())
+            if (!c.getSessionId().equals(excludeSession))
                 c.sendUserLogoutEvent(userName);
-            }
-        }
         log("Broadcast userlogout: " + userName);
     }
 
     public void broadcastMessage(String from, String message, String excludeSession) {
-        for (ClientHandler c : getLoggedInClients()) {
-            if (!c.getSessionId().equals(excludeSession)) {
+        for (ClientHandler c : getLoggedInClients())
+            if (!c.getSessionId().equals(excludeSession))
                 c.sendMessageEvent(from, message);
-            }
-        }
         log("Broadcast message from " + from + ": " + message);
     }
 
@@ -113,35 +103,25 @@ public class Server {
         messageQueue.add(msg);
         synchronized (messageHistory) {
             messageHistory.add(msg);
-            if (messageHistory.size() > 10) {
-                messageHistory.remove(0);
-            }
+            if (messageHistory.size() > 10)
+                messageHistory.removeFirst();
         }
     }
 
     public void sendHistoryTo(ClientHandler client) {
         synchronized (messageHistory) {
-            for (ChatMessage msg : messageHistory) {
+            for (ChatMessage msg : messageHistory)
                 client.sendMessageEvent(msg.from(), msg.message());
-            }
         }
-    }
-
-    public static String generateSessionId() {
-        return "session-" + new Random().nextInt(999999);
-    }
-
-    public void log(String message) {
-        System.out.println(message);
     }
 
     private void startMessageDispatcher() {
         Thread dispatcher = new Thread(() -> {
             while (true) {
                 ChatMessage msg = messageQueue.poll();
-                if (msg != null) {
+                if (msg != null)
                     broadcastMessage(msg.from(), msg.message(), msg.sessionId());
-                } else {
+                else {
                     try {
                         Thread.sleep(50);
                     } catch (InterruptedException ignored) {}
@@ -152,17 +132,20 @@ public class Server {
         dispatcher.start();
     }
 
-    private void startInactivityMonitor() {
+    private void startPingMonitor() {
         Thread monitor = new Thread(() -> {
             while (true) {
                 long now = System.currentTimeMillis();
                 List<ClientHandler> snapshot = new ArrayList<>(clients);
                 for (ClientHandler client : snapshot) {
-                    if (now - client.getLastActive() > 10000) {
+                    if (now - client.getLastPingTime() > 10_000) {
                         log("[TIMEOUT] " + client.getUserName() + " timed out.");
                         client.sendError("Disconnected due to inactivity");
                         removeClient(client);
                         broadcastUserLogout(client.getUserName(), client.getSessionId());
+                        try {
+                            client.socket.close();
+                        } catch (IOException ignored) {}
                     }
                 }
                 try {
